syntax = "proto3";

option csharp_namespace = "Kira.Flight.API.GrpcServer.Protos";
import "google/protobuf/timestamp.proto";

service FlightService {
	rpc GetSeat (GetSeatRequest) returns (SeatResponse);
	rpc ReserveSeat (ReserveSeatRequest) returns (ReservedSeat);
}

message GetSeatRequest {
	string Id = 1;
}

message ReserveSeatRequest {
	string Id = 1;
}

message SeatResponse {
	string Id = 1;
	string SeatNumber = 2;
	bool IsReserved = 3;
}

message ReservedSeat {
	string Id = 1;
	string SeatNumber = 2;
	bool IsReserved = 3;
}
